--- a/config/shared/.config/waybar/style.css
+++ b/config/shared/.config/waybar/style.css
@@ -12,8 +12,6 @@ window.bottom_bar#waybar {
   background-color: rgba(0, 0, 0, 0.60);
   border: none;
   border-radius: 12px;
-  margin-left: 12px;
-  margin-right: 12px;
 }
 #workspaces {
   background: transparent;
@@ -52,8 +50,8 @@ window.top_bar .modules-center {
   margin-bottom: 0;
 }
 window.top_bar .modules-right { padding-left: 24px; padding-right: 24px; }
-window.bottom_bar .modules-left { border-radius: 12px; margin-left: 12px; }
-window.bottom_bar .modules-right { border-radius: 12px; margin-right: 12px; }
+window.bottom_bar .modules-left { border-radius: 12px; margin-left: 0; }
+window.bottom_bar .modules-right { border-radius: 12px; margin-right: 0; }
 #custom-day_month, #custom-date {
   color: @overlay2;
   padding: 0 14px;
@@ -192,7 +190,7 @@ window.bottom_bar .modules-right,
 #group-system,
 #system,
 window.dock_bar#waybar {
-  border: 1px solid rgba(138, 173, 244, 0.93);
+  border: 2px solid rgba(138, 173, 244, 0.93);
 }
 
 #custom-dock_windows { background-image: url("/home/osmarg/.local/share/icons/windows.png"); }
